[package]
name = "meshpulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = {version = "0.12.3", optional = true}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] , optional = true}
serde_json = { version = "1.0", optional = true }
meshpulse_derive = { path = "../meshpulse_derive", features = ["mqtt"] }

[features]
default = ["mqtt"]
mqtt = ["paho-mqtt", "serde", "serde_json", "meshpulse_derive/mqtt"]
grpc = []
amqp = []
