[package]
name = "meshpulse"
version = "0.1.3"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/tluijken/meshpulse"
documentation = "https://docs.rs/meshpulse"
homepage = "https://github.com/tluijken/meshpulse"
description = """
Meshpulse is a Rust library for easy communication between microservices, based on either MQTT, AMQP, gRPC or HTTP.
"""
keywords = ["MQTT", "AMQP", "gRPC", "HTTP", "communication"]
categories = [
    "communication",
]
autobenches = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = {version = "0.12.3", optional = true}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] , optional = true}
serde_json = { version = "1.0", optional = true }
meshpulse_derive = { path = "../meshpulse_derive", features = ["mqtt"], version = "0.1.3" }
lazy_static = { version = "1.4" }
uuid = { version = "1.7", optional = true, features = ["v4"] }

[features]
default = ["mqtt"]
mqtt = ["paho-mqtt", "serde", "serde_json", "meshpulse_derive/mqtt", "uuid"]
grpc = []
amqp = []
