[package]
name = "meshpulse"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/tluijken/meshpulse"
documentation = "https://docs.rs/meshpulse"
homepage = "https://github.com/tluijken/meshpulse"
description = """
Meshpulse is a Rust library for easy communication between microservices, based on either MQTT, AMQP, gRPC or HTTP.
"""
keywords = ["MQTT", "AMQP", "gRPC", "HTTP", "communication"]
categories = [
    "communication",
]
autobenches = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = {version = "0.12.5", optional = true}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] , optional = true}
serde_json = { version = "1.0", optional = true }
meshpulse_derive = { features = ["mqtt"], path = "../meshpulse_derive", version = "0.1.0" }
lazy_static = { version = "1.5" }
once_cell = "1.10"
uuid = { version = "1.10", optional = true, features = ["v4"] }
amqprs = { version = "2.0.0", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = ["mqtt", "amqp"]
mqtt = ["paho-mqtt", "serde", "serde_json", "meshpulse_derive/mqtt", "uuid"]
grpc = []
amqp = ["serde", "serde_json", "meshpulse_derive/amqp", "uuid", "amqprs", "async-trait"]
