[package]
name = "testclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meshpulse = { version = "0.1.0", path = "../meshpulse", features = ["mqtt"] }
serde = { version = "1.0", features = ["derive"] }
meshpulse_derive = { version = "0.1.0", path = "../meshpulse_derive", features = ["mqtt"] }
